# xgo_ros

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: config.json  ekf.yaml  gait.yaml  joints.yaml  links.yaml  ros_control.yaml  xgomini.yaml
include/xgo2_ros/: conversion_utils.hpp  xgo.hpp
include/xgo_ros/: xgo.h
launch/: bringup_launch.py  champ_bringup.launch  xgo_control.launch  xgo_control_launch.py
meshes/: 11_Link.STL  13_Link.STL  21_Link.STL  23_Link.STL  31_Link.STL  33_Link.STL  41_Link.STL  43_Link.STL  500_Link.STL  50_Link.STL  51_Link.STL
src/: xgo.cpp  xgo_control_node.cpp
urdf/: mini2_description.csv  mini2_description.urdf  mini2_description_base.urdf
